--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 flask==3.0.3
 flask-cors==4.0.1
 opencv-python==4.10.0.84
-numpy==1.24.3
+numpy==1.26.4
 faiss-cpu==1.8.0
 mediapipe==0.10.14
 psutil==5.9.8
+pandas==2.2.2
+scikit-learn==1.5.0
+matplotlib==3.9.0
+seaborn==0.13.2
